<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/three_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/isFragmentThree"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/three_say"
        app:layout_constraintBottom_toTopOf="@id/one_button_reset"
        app:layout_constraintTop_toBottomOf="@id/three_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/saySomething"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:layout_width="400dp"
        android:layout_height="100dp"
        />

    <Button
        android:id="@+id/one_button_reset"
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>